pages/primitives/docs/components/tooltip/0.0.1/index.mdx
---
title: Tooltip
name: tooltip
description: A popup that displays information related to an element when the element receives keyboard focus or the mouse hovers over it.
aria: https://www.w3.org/TR/wai-aria-practices-1.2/#tooltip
features:
  - Built-in state machine to control display delay.
  - Opens when the trigger is focused or hovered.
  - Closes when the trigger is activated or when pressing escape.
---

import { TooltipHero } from '../../../../../../components/Hero/TooltipHero';

<HeroSlot>
  <TooltipHero />
</HeroSlot>

## Installation

Install the component from your command line.

```bash
npm install @radix-ui/react-tooltip
```

## Anatomy

Import the components and piece the parts together.

```jsx
import * as Tooltip from '@radix-ui/react-tooltip';

export default () => (
  <Tooltip.Root>
    <Tooltip.Trigger />
    <Tooltip.Content />
    <Tooltip.Arrow />
  </Tooltip.Root>
);
```

## Basic example

Create your styled tooltip component from the primitive parts.

```jsx manual
// import { styled } from 'path-to/stitches.config';
import * as Tooltip from '@radix-ui/react-tooltip';
import { BlendingModeIcon } from '@radix-ui/react-icons';

const StyledContent = styled(Tooltip.Content, {
  borderRadius: 3,
  padding: '5px 10px',
  fontSize: 14,
  backgroundColor: 'gainsboro',
  color: 'black',
});

const StyledArrow = styled(Tooltip.Arrow, {
  fill: 'gainsboro',
});

export default () => (
  <Tooltip.Root>
    <Tooltip.Trigger>
      <BlendingModeIcon />
    </Tooltip.Trigger>
    <StyledContent>
      Blending mode
      <StyledArrow />
    </StyledContent>
  </Tooltip.Root>
);
```

<Note>

**Note:** This example uses [Stitches](https://stitches.dev) but any styling solution is [compatible](../../overview/styling).

</Note>

## API Reference

### Root

Contains all the parts of a tooltip.

<PropsTable
  data={[
    {
      name: 'defaultOpen',
      type: 'boolean',
      description: (
        <span>
          The open state of the tooltip when it is initially rendered.
          Use when you do not need to control its open state.
        </span>
      ),
    },
    {
      name: 'open',
      type: 'boolean',
      description: (
        <span>
          The controlled open state of the tooltip. Must be used in
          conjunction with <Code>onOpenChange</Code>.
        </span>
      ),
    },
    {
      name: 'onOpenChange',
      type: '(open: boolean) => void',
      typeSimple: 'function',
      description: (
        <span>
          Event handler called when the open state of the tooltip
          changes.
        </span>
      ),
    },
  ]}
/>

### Trigger

The button that toggles the tooltip. By default, the `Tooltip.Content` will position itself against the trigger.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'button',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
  ]}
/>

### Content

The component that pops out when the tooltip is open.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'div',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'aria-label',
      type: 'string',
      description: (
        <span>
          By default, screenreaders will announce the content inside
          the component. If this is not descriptive enough, or you
          have content that cannot be announced, use{' '}
          <Code>aria-label</Code> as a more descriptive label.
        </span>
      ),
    },
    {
      name: 'portalled',
      type: 'boolean',
      default: 'true',
      description: (
        <span>
          Whether to render in a <Code>Portal</Code> when open.
        </span>
      ),
    },
    {
      name: 'anchorRef',
      type: 'React.RefObject<MeasurableElement>',
      typeSimple: 'ref',
      description: (
        <span>
          An optional ref of an element to position against. By
          default, it will use <Code>Tooltip.Trigger</Code>.
        </span>
      ),
    },
    {
      name: 'side',
      type: '"top" | "right" | "bottom" | "left"',
      typeSimple: 'enum',
      default: '"bottom"',
      description: (
        <span>
          The preferred side of the anchor to render against when
          open. Will be reversed when collisions occur and{' '}
          <Code>avoidCollisions</Code> is enabled.
        </span>
      ),
    },
    {
      name: 'sideOffset',
      type: 'number',
      default: '0',
      description: (
        <span>
          <span>The distance in pixels from the anchor.</span>
        </span>
      ),
    },
    {
      name: 'align',
      type: '"start" | "center" | "end"',
      typeSimple: 'enum',
      default: '"center"',
      description: (
        <span>
          The preferred alignment against the anchor. May change when
          collisions occur.
        </span>
      ),
    },
    {
      name: 'alignOffset',
      type: 'number',
      default: '0',
      description: (
        <span>
          An offset in pixels from the <Code>"start"</Code> or{' '}
          <Code>"end"</Code> alignment options.
        </span>
      ),
    },
    {
      name: 'avoidCollisions',
      type: 'boolean',
      default: 'true',
      description: (
        <span>
          When <Code>true</Code>, overrides the <Code>side</Code> and
          <Code>align</Code> preferences to prevent collisions with window
          edges.
        </span>
      ),
    },
    {
      name: 'collisionTolerance',
      type: 'boolean',
      default: '0',
      description: (
        <span>
          The distance in pixels from window edges where collision
          detection should occur.
        </span>
      ),
    },
  ]}
/>

### Arrow

An optional arrow element to render alongside the tooltip. This can be used to help visually link the anchor with the `Tooltip.Content`. Must be rendered inside `Tooltip.Content`.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'svg',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the entire SVG and all of its paths.',
    },
    {
      name: 'width',
      type: 'number',
      default: 10,
      description: <span>The width of the arrow in pixels.</span>,
    },
    {
      name: 'height',
      type: 'number',
      default: 5,
      description: <span>The height of the arrow in pixels.</span>,
    },
    {
      name: 'offset',
      type: 'number',
      default: 0,
      description: (
        <span>
          The distance in pixels to render from the{' '}
          <Code>Tooltip.Content</Code> edge.
        </span>
      ),
    },
  ]}
/>

## Styling

### Origin-aware animations

We expose a CSS custom property `--radix-tooltip-content-transform-origin`. Use it to animate the content from its computed origin based on `side`, `sideOffset`, `align`, `alignOffset` and any collisions.

```jsx
const scaleIn = css.keyframes({
  '0%': { opacity: 0, transform: 'scale(0)' },
  '100%': { opacity: 1, transform: 'scale(1)' },
});

const StyledContent = styled(Tooltip.Content, {
  transformOrigin: 'var(--radix-tooltip-content-transform-origin)',
  animation: `${scaleIn} 0.5s ease-out`,
});
```

### Collision-aware animations

We expose `data-side` and `data-align` attributes. Their values will change at runtime to reflect collisions. Use them to create collision and direction-aware animations.

```jsx
const slideDown = css.keyframes({
  '0%': { opacity: 0, transform: 'translateY(-10px)' },
  '100%': { opacity: 1, transform: 'translateY(0)' },
});

const slideUp = css.keyframes({
  '0%': { opacity: 0, transform: 'translateY(10px)' },
  '100%': { opacity: 1, transform: 'translateY(0)' },
});

const StyledContent = styled(Tooltip.Content, {
  '&[data-side="top"]': { animationName: slideUp },
  '&[data-side="bottom"]': { animationName: slideDown },
  animationDuration: '0.6s',
  animationTimingFunction: 'cubic-bezier(0.16, 1, 0.3, 1)',
});
```

## Accessibility

### Keyboard Interactions

<KeyboardTable
  data={[
    {
      keys: ['Tab'],
      description: 'Opens/closes the tooltip without delay.',
    },
    {
      keys: ['Space'],
      description: 'If open, closes the tooltip without delay.',
    },
    {
      keys: ['Enter'],
      description: 'If open, closes the tooltip without delay.',
    },
  ]}
/>

## Custom APIs

Create your own API by abstracting the primitive parts into your own component.

### Abstract parts and introduce a content prop

This example abstract all of the `Tooltip` parts and introduces a new `content` prop.

#### Usage

```jsx
import { Tooltip } from './your-tooltip';

export default () => (
  <Tooltip content="Tooltip content">
    <button>Tooltip trigger</button>
  </Tooltip>
);
```

#### Implementation

```jsx
// your-tooltip.jsx
import React from 'react';
import * as TooltipPrimitive from '@radix-ui/react-tooltip';

export function Tooltip({
  children,
  content,
  open,
  defaultOpen,
  onOpenChange,
  ...props
}) {
  return (
    <TooltipPrimitive.Root
      open={open}
      defaultOpen={defaultOpen}
      onOpenChange={onOpenChange}
    >
      <TooltipPrimitive.Trigger
        as={React.forwardRef((props, forwardedRef) =>
          React.cloneElement(React.Children.only(children), {
            ...props,
            ref: forwardedRef,
          })
        )}
      />
      <TooltipPrimitive.Content side="top" align="center" {...props}>
        {content}
        <TooltipPrimitive.Arrow offset={5} width={11} height={5} />
      </TooltipPrimitive.Content>
    </TooltipPrimitive.Root>
  );
}
```
